source/blender/io/alembic/intern/abc_customdata.cc
@@ -36,6 +36,7 @@
 #include "BLI_utildefines.h"
 
 #include "BKE_customdata.h"
+#include "BKE_mesh.h"
 
 /* NOTE: for now only UVs and Vertex Colors are supported for streaming.
  * Although Alembic only allows for a single UV layer per {I|O}Schema, and does
@@ -253,7 +254,8 @@ static void write_mcol(const OCompoundProperty &prop,
 
 void write_generated_coordinates(const OCompoundProperty &prop, CDStreamConfig &config)
 {
-  const void *customdata = CustomData_get_layer(&config.mesh->vdata, CD_ORCO);
+  Mesh *mesh = config.mesh;
+  const void *customdata = CustomData_get_layer(&mesh->vdata, CD_ORCO);
   if (customdata == nullptr) {
     /* Data not available, so don't even bother creating an Alembic property for it. */
     return;
@@ -267,6 +269,11 @@ void write_generated_coordinates(const OCompoundProperty &prop, CDStreamConfig &
     copy_yup_from_zup(orco_yup, orcodata[vertex_idx]);
     coords[vertex_idx].setValue(orco_yup[0], orco_yup[1], orco_yup[2]);
   }
+
+  /* ORCOs are always stored in the normalized 0..1 range in Blender, but Alembic stores them
+   * unnormalized, so we need to unnormalize (invert transform) them. */
+  BKE_mesh_orco_verts_transform(
+      mesh, reinterpret_cast<float(*)[3]>(&coords[0]), mesh->totvert, true);
 
   if (!config.abc_orco.valid()) {
     /* Create the Alembic property and keep a reference so future frames can reuse it. */
@@ -536,13 +543,14 @@ void read_generated_coordinates(const ICompoundProperty &prop,
   IV3fGeomParam::Sample sample = param.getExpandedValue(iss);
   Alembic::AbcGeom::V3fArraySamplePtr abc_ocro = sample.getVals();
   const size_t totvert = abc_ocro.get()->size();
+  Mesh *mesh = config.mesh;
 
   void *cd_data;
-  if (CustomData_has_layer(&config.mesh->vdata, CD_ORCO)) {
-    cd_data = CustomData_get_layer(&config.mesh->vdata, CD_ORCO);
+  if (CustomData_has_layer(&mesh->vdata, CD_ORCO)) {
+    cd_data = CustomData_get_layer(&mesh->vdata, CD_ORCO);
   }
   else {
-    cd_data = CustomData_add_layer(&config.mesh->vdata, CD_ORCO, CD_CALLOC, nullptr, totvert);
+    cd_data = CustomData_add_layer(&mesh->vdata, CD_ORCO, CD_CALLOC, nullptr, totvert);
   }
 
   float(*orcodata)[3] = static_cast<float(*)[3]>(cd_data);
@@ -550,6 +558,10 @@ void read_generated_coordinates(const ICompoundProperty &prop,
     const Imath::V3f &abc_coords = (*abc_ocro)[vertex_idx];
     copy_zup_from_yup(orcodata[vertex_idx], abc_coords.getValue());
   }
+
+  /* ORCOs are always stored in the normalized 0..1 range in Blender, but Alembic stores them
+   * unnormalized, so we need to normalize them. */
+  BKE_mesh_orco_verts_transform(mesh, orcodata, mesh->totvert, false);
 }
 
 void read_custom_data(const std::string &iobject_full_name,
